// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quantity Button QuantityButton for Add Field 1`] = `
<DocumentFragment>
  .emotion-1 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

<span
    class="bp3-popover-wrapper emotion-1"
  >
    <span
      class="bp3-popover-target"
    >
      <button
        class="bp3-button  emotion-0"
        tabindex="0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Quantity Button QuantityButton for Remove Field 1`] = `
<DocumentFragment>
  .emotion-1 span.bp3-popover-target {
  display: inherit !important;
}

.emotion-0 {
  line-height: normal;
  text-transform: inherit;
}

<span
    class="bp3-popover-wrapper emotion-1"
  >
    <span
      class="bp3-popover-target"
    >
      <button
        class="bp3-button  emotion-0"
        tabindex="0"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-cross"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
</DocumentFragment>
`;
